--- a/src/components/RunnableEditor/RunnableModelEditor.css
+++ b/src/components/RunnableEditor/RunnableModelEditor.css
@@ -1,9 +1,7 @@
 .runnable-model-editor {
     display: flex;
     flex-direction: column;
-    min-height: 300px;
-    height: 80vh;
-    max-height: 80vh; /* Leave a little room at bottom of screen to reveal instruction text */
+    height: 100%;
     position: relative;
     background-color: #021f1f;
     color: white;
