--- a/src/index.css
+++ b/src/index.css
@@ -35,12 +35,14 @@
     flex: 2;
     width: 100%;
     height: 100%;
+    overflow: auto;
 }
 
 .right {
     flex: 1;
     width: 100%;
     height: 100%;
+    overflow: auto;
 }
 
 .menu-toggle-button {
